// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonIcon /> Size: l and Variant: dark should render 1`] = `
<span
  class="ljk-text-black ljk-text-4xl"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: l and Variant: light should render 1`] = `
<span
  class="ljk-text-white ljk-text-4xl"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: l and Variant: primary should render 1`] = `
<span
  class="ljk-text-primary ljk-text-4xl"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: l and Variant: secondary should render 1`] = `
<span
  class="ljk-text-secondary ljk-text-4xl"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: m and Variant: dark should render 1`] = `
<span
  class="ljk-text-black ljk-text-base"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: m and Variant: light should render 1`] = `
<span
  class="ljk-text-white ljk-text-base"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: m and Variant: primary should render 1`] = `
<span
  class="ljk-text-primary ljk-text-base"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: m and Variant: secondary should render 1`] = `
<span
  class="ljk-text-secondary ljk-text-base"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: s and Variant: dark should render 1`] = `
<span
  class="ljk-text-black ljk-text-sm"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: s and Variant: light should render 1`] = `
<span
  class="ljk-text-white ljk-text-sm"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: s and Variant: primary should render 1`] = `
<span
  class="ljk-text-primary ljk-text-sm"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`<ButtonIcon /> Size: s and Variant: secondary should render 1`] = `
<span
  class="ljk-text-secondary ljk-text-sm"
>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-coffee fa-w-20 ljk-fill-current"
    data-icon="coffee"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
    />
  </svg>
</span>
`;
